# freelist

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  tarpaulin-report.html
.github/workflows/: coverage.yml  miri.yml
benches/: comparison.rs
doc/: freelist.md  lib.md
src/: freelist2.rs  into_iter.rs  iterators.rs  lib.rs  slot.rs
src/iterators/: into_iter.rs  iter.rs  iter_mut.rs
